--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.1.0",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
     "core-js": "^3.11.0",
-    "jquery": "^3.6.0",
-    "popper.js": "^1.16.1",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1"
   },
@@ -20,29 +18,12 @@
     "@vue/cli-plugin-babel": "^4.5.12",
     "@vue/cli-plugin-eslint": "^4.5.12",
     "@vue/cli-service": "^4.5.12",
+    "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.0.1",
     "eslint": "^7.24.0",
     "eslint-plugin-vue": "^7.9.0",
+    "postcss": "^7.0.35",
     "vue-template-compiler": "^2.6.12"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
   },
   "browserslist": [
     "> 1%",
